@@ -15,6 +15,7 @@
 * Update - Implement expirement on Connect Page.
 * Fix - Columns are misaligned on Payments->Transactions/Disputes page.
 * Fix - Risk level is displayed as a "Numeric" value in transactions CSV.
+* Add - Redirect to WooCommerce home page after successful WooCommerce Payments KYC
 
 = 2.3.3 - 2021-05-06 =
 * Update - Additional logic and styling for instant deposits.
